feature: add bridge phrase

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Header from '../components/Header.astro';
 import Layout from '../layouts/Layout.astro';
 import Nav from '../components/Nav.astro'
 import SectionPosts from '../components/SectionPosts.astro'
-
+import SectionBridgePhrase from '../components/SectionBridgePhrase.astro';
 ---
 
 <Layout>
@@ -11,6 +11,7 @@ import SectionPosts from '../components/SectionPosts.astro'
 	<main>
 		<div class="content">
 			<SectionPosts />
+			<SectionBridgePhrase />
 		</div>
 	</main>
 </Layout>
