feature: add marquee

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,6 +5,7 @@
     <div class="header__content">
         <h1 class="header__title">La emoción está en el segundo antes del movimiento</h1>
         <p class="header__slogan">Una fracción de segundo. Un disparo. Una historia</p>
+        <h2 class="header__job">Fotógrafo deportivo</h2>
     </div>
 </header>
 
@@ -40,6 +41,17 @@
             font-weight: 400;
             font-style: normal;
             font-size: 20px;
+        }
+
+        .header__job {
+            font-family: "Inter", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 20px;
+            background-color: #000000;
+            display: inline;
+            padding: 7px;
         }
 
     }
