--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Layout from '../layouts/Layout.astro';
 import Nav from '../components/Nav.astro'
 import SectionPosts from '../components/SectionPosts.astro'
 import SectionBridgePhrase from '../components/SectionBridgePhrase.astro';
+import Marquee from '../components/Marquee.astro'
 ---
 
 <Layout>
@@ -12,6 +13,7 @@ import SectionBridgePhrase from '../components/SectionBridgePhrase.astro';
 		<div class="content">
 			<SectionPosts />
 			<SectionBridgePhrase />
+			<Marquee />
 		</div>
 	</main>
 </Layout>
