--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@
 
 <style>
 .header {
-    background-image: url('/src/assets/images/hero.png');
+    background-image: url('/images/hero.png');
     background-size: cover;
     background-position:cover;
     background-repeat: no-repeat;
