--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
-import Header from '../components/Header.astro';
-import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header.astro'
+import Layout from '../layouts/Layout.astro'
 import Nav from '../components/Nav.astro'
 import SectionPosts from '../components/SectionPosts.astro'
-import SectionBridgePhrase from '../components/SectionBridgePhrase.astro';
-import Marquee from '../components/Marquee.astro'
+import SectionBridgePhrase from '../components/SectionBridgePhrase.astro'
+import SectionMarquee from '../components/Marquee.astro'
+import SectionAbout from '../components/SectionAbout.astro'
 ---
 
 <Layout>
@@ -13,7 +14,8 @@ import Marquee from '../components/Marquee.astro'
 		<div class="content">
 			<SectionPosts />
 			<SectionBridgePhrase />
-			<Marquee />
+			<SectionMarquee />
+			<SectionAbout />
 		</div>
 	</main>
 </Layout>
