feat: add interlude

--- a/src/components/SectionAbout.astro
+++ b/src/components/SectionAbout.astro
@@ -17,11 +17,18 @@
 <style lang="scss">
     .about {
         display: flex;
-        gap: 100px;
+        gap: 140px;
         align-items: center;
+        border-top: 1px solid #666666;
+        border-bottom: 1px solid #666666;
+        padding: 4rem;
 
         &__description {
             line-height: 2;
+
+            p {
+                margin: 0
+            }
         }
 
         &__image {
