--- a/src/components/SectionBridgePhrase.astro
+++ b/src/components/SectionBridgePhrase.astro
@@ -1,7 +1,7 @@
 ---
 ---
 <section class="bridge-phrase">
-    <p>No soy atleta, soy fotógrafo. Pero entiendo lo que significa dejarlo todo en un instante.</p>
+    <p>Soy fotógrafo, no atleta. Pero entiendo lo que significa dejarlo todo en un instante.</p>
 </section>
 
 <style lang="scss">
