--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Nav from '../components/Nav.astro'
 import SectionPosts from '../components/SectionPosts.astro'
 import SectionBridgePhrase from '../components/SectionBridgePhrase.astro'
 import SectionMarquee from '../components/Marquee.astro'
+import SectionInterlude from '../components/SectionInterlude.astro'
 import SectionAbout from '../components/SectionAbout.astro'
 ---
 
@@ -15,6 +16,7 @@ import SectionAbout from '../components/SectionAbout.astro'
 			<SectionPosts />
 			<SectionBridgePhrase />
 			<SectionMarquee />
+			<SectionInterlude />
 			<SectionAbout />
 		</div>
 	</main>
