--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -29,5 +29,40 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 section {
-    margin-bottom: 200px
+    margin-bottom: 150px
+}
+
+.button {
+    font-family: 'Abel', sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    background-color: black;
+    color: white;
+    text-decoration: none;
+    transition: background-color 0.3s ease, color 0.3s ease;
+
+    &:hover, &:active, &:focus {
+        background-color: #006eb2;
+    }
+    &:active {
+        background-color: #555;
+    }
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+a:hover {
+    text-decoration: underline;
+}
+a:visited {
+    color: inherit;
+}
+a:focus {
+    outline: none;
 }
