--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import SectionBridgePhrase from '../components/SectionBridgePhrase.astro'
 import SectionMarquee from '../components/Marquee.astro'
 import SectionInterlude from '../components/SectionInterlude.astro'
 import SectionAbout from '../components/SectionAbout.astro'
+import Footer from '../components/Footer.astro'
 ---
 
 <Layout>
@@ -20,4 +21,5 @@ import SectionAbout from '../components/SectionAbout.astro'
 			<SectionAbout />
 		</div>
 	</main>
+	<Footer
 </Layout>
