--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,8 @@ body, html {
     font-weight: 400;
     font-style: normal;
     font-size: 16px;
+    height: 100%;
+    width: 100%;
 }
 
 main {
@@ -44,13 +46,6 @@ section {
     color: white;
     text-decoration: none;
     transition: background-color 0.3s ease, color 0.3s ease;
-
-    &:hover, &:active, &:focus {
-        background-color: #006eb2;
-    }
-    &:active {
-        background-color: #555;
-    }
 }
 
 a {
