feature: add-pages

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,9 +3,9 @@
 <footer class="footer">
     <nav>
         <ul>
-            <li><a href="/">Política de privacidad</a></li>
-            <li><a href="/">Política de cookies</a></li>
-            <li><a href="/">Aviso legal</a></li>
+            <li><a href="/politica-de-cookies">Política de privacidad</a></li>
+            <li><a href="/politica-de-cookies">Política de cookies</a></li>
+            <li><a href="/politica-de-cookies">Aviso legal</a></li>
         </ul>
     </nav>
     <p>Juan Pablo Flores Jiménez - Fotógrafo</p>
