--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,6 @@ import SectionInterlude from '../components/SectionInterlude.astro'
 import SectionAbout from '../components/SectionAbout.astro'
 import Footer from '../components/Footer.astro'
 ---
-
 <Layout>
 	<Header />
 	<main>
@@ -21,5 +20,5 @@ import Footer from '../components/Footer.astro'
 			<SectionAbout />
 		</div>
 	</main>
-	<Footer
+	<Footer />
 </Layout>
