--- a/src/components/SectionPosts.astro
+++ b/src/components/SectionPosts.astro
@@ -23,16 +23,26 @@
 
 <style lang="scss">
 .section-posts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 0 2rem;
+
     h2 {
         margin-bottom: 40px;
         text-align: center;
     }
 
     &__content {
+        width: 100vw;
         text-align: left;
         display: flex;
+        flex-wrap: wrap;
         gap: 30px;
         justify-content: center;
+        padding: 0 2rem;
     }
 
     &__card {
