feat: add responsive version

--- a/src/components/SectionAbout.astro
+++ b/src/components/SectionAbout.astro
@@ -11,8 +11,6 @@ import SectionContact from "./SectionContact.astro"
             <p>No busco imágenes perfectas. Busco verdad, ritmo, emoción.</p>
             <p>Cada evento, cada sesión, es una oportunidad para mirar mejor. Y para contar con imágenes lo que las palabras no alcanzan.</p>
         </div>
-    </div>
-    <div class="about__contact">
          <SectionContact />
     </div>
     <img src="./images/about.png" alt="" class="about__image" />
@@ -25,23 +23,20 @@ import SectionContact from "./SectionContact.astro"
         flex-direction: row;
         gap: 50px;
         justify-content: center;
-        border-top: 1px solid #666666;
-        border-bottom: 1px solid #666666;
         padding: 4rem;
-        align-items: flex-start;
+        width: 100%;
+        max-width: 1200px;
 
-
-        &__description,
-        &__contact,
-        &__image {
-            flex: 1 1 300px; /* Se adaptan pero no bajan de 300px */
-            max-width: 100%;  /* Opcional: limitar el máximo para mantener 3 columnas grandes */
-            min-width: 280px;
+        &__description {
+            min-width: 300px;
+            max-width: 600px;
         }
 
         &__image {
             border-radius: 4px;
-            max-width: 30%;
+            object-fit: cover;
+            width: 400px;
         }
+
     }
 </style>
