--- a/src/components/SectionContact.astro
+++ b/src/components/SectionContact.astro
@@ -10,7 +10,7 @@
 <style lang="scss">
     .contact {
         .button {
-            display: block;
+            display: inline-block;
             margin-top: 2rem;
         }
     }
