--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Footer from '../components/Footer.astro'
 			<SectionPosts />
 			<SectionBridgePhrase />
 			<SectionMarquee />
-			<SectionInterlude />
+			<!-- <SectionInterlude /> -->
 			<SectionAbout />
 		</div>
 	</main>
