--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,8 @@
 ---
 ---
 <footer class="footer">
-    <nav>
+    <div class="content">
+        <nav>
         <ul>
             <li><a href="/politica-de-cookies">Política de privacidad</a></li>
             <li><a href="/politica-de-cookies">Política de cookies</a></li>
@@ -9,28 +10,45 @@
         </ul>
     </nav>
     <p>Juan Pablo Flores Jiménez - Fotógrafo</p>
+    </div>
     <p>© 2025 Todos los derechos reservados - <a href="">Tokyto Studio</a></p>
 </footer>
 
 <style lang="scss">
-    .footer {
+
+.footer {
+    padding: 1rem;
+    color: #ffffff;
+    font-size: 14px;
+    background-color: #000000;
+    text-align: center;
+
+    .content {
         text-align: center;
-        padding: 1rem;
-        background-color: #000000;
-        color: #ffffff;
-        font-size: 14px;
         display: flex;
-        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 10px;
+        justify-content: center;
 
         nav  {
             ul {
                 display: flex;
                 flex-direction: row;
+                flex-wrap: wrap;
+                text-align: left;
+                padding: 0;
+                gap: 20px;
+                text-align: center;
                 li {
                    list-style: none;
-                   margin: 0 10px;
                 }
             }
         }
+        p:before {
+            content: "-";
+            margin-right: 8px;
+        }
     }
+
+}
 </style>
