--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,8 +3,8 @@
 <header class="header">
     <div class="header__content">
         <h1 class="header__title">La emoción está en el segundo antes del movimiento</h1>
-        <p class="header__slogan">Una fracción de segundo. Un disparo. Una historia</p>
-        <h2 class="header__job">Fotógrafo deportivo</h2>
+        <p class="header__slogan">Especialista en fotografafía deportiva</p>
+        <h2 class="header__job">Juan Pablo Flores Jiménez - Fotógrafo</h2>
     </div>
 </header>
 
