feat: content page cms

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,9 +4,9 @@
     <div class="content">
         <nav>
         <ul>
-            <li><a href="/politica-de-cookies">Política de privacidad</a></li>
+            <li><a href="/politica-de-privacidad">Política de privacidad</a></li>
             <li><a href="/politica-de-cookies">Política de cookies</a></li>
-            <li><a href="/politica-de-cookies">Aviso legal</a></li>
+            <li><a href="/aviso-legal">Aviso legal</a></li>
         </ul>
     </nav>
     <p>Juan Pablo Flores Jiménez - Fotógrafo</p>
