--- a/src/components/SectionBridgePhrase.astro
+++ b/src/components/SectionBridgePhrase.astro
@@ -1,7 +1,8 @@
 ---
+    const phrase = Astro.props.phrase;
 ---
 <section class="bridge-phrase">
-    <p>Soy fotógrafo, no atleta. Pero entiendo lo que significa dejarlo todo en un instante.</p>
+    <p>{phrase}</p>
 </section>
 
 <style lang="scss">
