--- a/src/components/SectionContact.astro
+++ b/src/components/SectionContact.astro
@@ -1,10 +1,10 @@
 ---
+const { doc, email } = Astro.props;
 ---
 <div class="contact">
     <h2>¿Te gustaría que lo documente?</h2>
-    <p>Estoy empezando a construir este camino, y cada oportunidad me ayuda a mirar mejor.</p>
-    <p>Si organizas algo, entrenas, o simplemente te gustaría que lo cuente con imágenes, estaré encantado de escucharte.</p>
-    <a class="button" href="mailto:someone@example.com">Escríbeme sin compromiso</a>
+    <div  set:html={doc}></div>
+    <a class="button" href={`mailto:${email}`}>Escríbeme sin compromiso</a>
 </div>
 
 <style lang="scss">
