hotfix: set correct url

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 const data = Astro.props.data;
 const { title, subtitle, text, image } = data;
 ---
-<header class="header" style={`background-image: url('${image}');`}>
+<header class="header" style={`background-image: url('${import.meta.env.BASE_URL}${image}');`}>
     <div class="header__content">
         <h1 class="header__title">{title}</h1>
         <p class="header__slogan">{subtitle}</p>
