--- a/src/components/MiniHeader.astro
+++ b/src/components/MiniHeader.astro
@@ -24,7 +24,8 @@
         font-size: 16px;
         font-family: "Questrial", sans-serif;
         border-bottom: 1px solid #000000;
-        padding-bottom: 10px
+        padding-bottom: 10px;
+        padding-left: 10px;
     }
 }
 </style>
